# Free-Hack-Ticker-Linux

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
inc/: checker.h  connection.h  htmlparser.h  mainwindow.h  notification.h
src/: checker.cpp  connection.cpp  htmlparser.cpp  mainwindow.cpp  mainwindow.ui  notification.cpp
